# lk-s-2026-preporucivanje-filmova

./: .gitignore  README.md  data_split_instruction.md  documentation.md  main.py  optuna_studies.db  pyproject.toml
notebooks/: 02_collaboration_filtering.ipynb  03_content_based_filtering.ipynb  04_metrics_and_evaluation.ipynb  05_content_based.ipynb  06_hybrid_recommendation.ipynb  08_dataset_correlation.ipynb  09_optimization.ipynb  Untitled.ipynb
src/data_processing/: data_loader.py  splitters.py
src/evaluation/: evaluator.py  metrics.py
src/models/: cascading_hybrid.py  collaborative_filtering.py  content_based.py  hybrid.py  models.py  popular_baseline_model.py
src/optimization/: optimization.py
