[project]
name = "film-recommendations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap",
    "fastapi",
    "ipykernel",
    "joblib",
    "jupyter",
    "letterboxdpy",
    "matplotlib",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic",
    "pytest",
    "python-dotenv",
    "scikit-learn",
    "scikit-surprise",
    "seaborn",
    "tqdm",
    "uvicorn",
]
