[project]
name = "film-recommendations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deap",
    "fastapi",
    "ipykernel",
    "joblib",
    "jupyter",
    "letterboxdpy",
    "matplotlib",
    "numpy",
    "orjson>=3.11.9",
    "pandas",
    "pyarrow",
    "pydantic",
    "pytest",
    "python-dotenv",
    "scikit-learn",
    "scikit-surprise",
    "seaborn",
    "tqdm",
    "uvicorn",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ruff>=0.15.18",
]
