[project]
name = "film-recommendations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.14.1",
    "deap",
    "fastapi",
    "ipykernel",
    "joblib",
    "jupyter",
    "letterboxdpy",
    "loguru>=0.7.3",
    "matplotlib",
    "numba>=0.65.1",
    "numpy<2.0.0",
    "orjson>=3.11.9",
    "pandas<2.2.0",
    "psutil>=7.2.2",
    "pyarrow",
    "pydantic",
    "pytest",
    "python-dotenv",
    "scikit-learn",
    "scikit-surprise",
    "scipy>=1.17.0",
    "seaborn",
    "tqdm",
    "uvicorn",
    "numpy",
    "scipy",
    "cffi>=2.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "ruff>=0.15.18",
]

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
